--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <label class="col-lg-3 control-label">Highest Education</label>
                             <div class="col-lg-5">
                                 <select class="form-control" name="education">
-                                    <option value=""></option>
+                                    <option value="">Select your highest education</option>
                                     <option value="High School Diploma">High School Diploma</option>
                                     <option value="Bachelor's Degree">Bachelor's Degree</option>
                                     <option value="Master's Degree">Master's Degree</option>
