--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
                             <div class="col-lg-5">
                                 <select class="form-control" name="category">
                                     <option value="">Select a category</option>
-                                    <option value="spillage">Spillage</option>
-                                    <option value="brokenPipe">Broken Pipe</option>
-                                    <option value="electricHazard">Electric Hazard</option>
-                                    <option value="brokenPathway">Broken Pathway</option>
-                                    <option value="other">Other</option>
+                                    <option value="Spillage">Spillage</option>
+                                    <option value="Broken Pipe">Broken Pipe</option>
+                                    <option value="Electric Hazard">Electric Hazard</option>
+                                    <option value="Broken Pathway">Broken Pathway</option>
+                                    <option value="Other">Other</option>
                                 </select>
                             </div>
                         </div>
