added comment & terms

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Upload Image</label>
+                            <label class="col-lg-3 control-label">Upload Image(s)</label>
                             <div id="wrapper">
                                 <input id="fileUpload" type="file" multiple />
                                   <br />
@@ -230,12 +230,16 @@
                                 </div>
                         </div>
 
+                        <div class="page-header">
+                            <h4 style='text-align: left;'>Terms and Agreement</h4>
+                        </div>
+
                         <!-- terms -->
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Terms</label>
                             <div class="col-lg-5">
                                 <div class="checkbox">
-                                    <input type="checkbox" name="acceptTerms" /> Accept the terms and policies
+                                    <input type="checkbox" name="terms" /> Accept the terms and policies
                                 </div>
                             </div>
                         </div>
