--- a/result.html
+++ b/result.html
@@ -214,7 +214,7 @@
 
         <!-- terms -->
         <div class="row">
-            <label class="col-xs-3 control-label">Terms</label>
+            <label class="col-xs-3 control-label">Terms and Agreement</label>
             <label class="col-xs-4 control-label">
                 <script LANGUAGE="JavaScript">document.write(replacedTerms);</script>
             </label>
