--- a/index.html
+++ b/index.html
@@ -248,7 +248,12 @@
                         </div>
 
                         <!-- catpcha -->
-                        <div class="g-recaptcha" data-sitekey="6Lc_Og8UAAAAAN7g8i4fw32TaqMeXes6yfpv7aNw"></div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Terms</label>
+                            <div class="col-lg-5">
+                                <div class="g-recaptcha" data-sitekey="6Lc_Og8UAAAAAN7g8i4fw32TaqMeXes6yfpv7aNw"></div>
+                            </div>
+                        </div>
 
                         <!-- buttons -->
                         <div class="form-group">
