readded the label to captcha and set from lg to xs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row">
             <!-- form: -->
             <section>
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-xs-8 col-xs-offset-2">
                     <div class="page-header">
                         <h2 style='text-align: center;'>Please record the problem by filing the form below</h2>
                     </div>
@@ -55,19 +55,19 @@
 
                         <!-- first and last name -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Full name</label>
-                            <div class="col-lg-4">
+                            <label class="col-xs-3 control-label">Full name</label>
+                            <div class="col-xs-4">
                                 <input type="text" class="form-control" name="firstName" placeholder="First name" />
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-xs-4">
                                 <input type="text" class="form-control" name="lastName" placeholder="Last name" />
                             </div>
                         </div>
 
                         <!-- gender -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Gender</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Gender</label>
+                            <div class="col-xs-5">
                                 <div class="radio">
                                     <label>
                                         <input type="radio" name="gender" value="Male" /> Male
@@ -88,8 +88,8 @@
 
                         <!-- highest education -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Highest Education</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Highest Education</label>
+                            <div class="col-xs-5">
                                 <select class="form-control" name="education">
                                     <option value="">Select your highest education</option>
                                     <option value="High School Diploma">High School Diploma</option>
@@ -102,16 +102,16 @@
 
                         <!-- email -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Email address</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Email address</label>
+                            <div class="col-xs-5">
                                 <input type="text" class="form-control" name="email" />
                             </div>
                         </div>
 
                         <!-- date -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Date</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Date</label>
+                            <div class="col-xs-5">
                                 <input type="text" class="form-control" name="date" placeholder="YYYY/MM/DD" />
                             </div>
                         </div>
@@ -122,22 +122,22 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Street</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Street</label>
+                            <div class="col-xs-5">
                                 <input type="text" class="form-control" name="street" />
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">City</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">City</label>
+                            <div class="col-xs-5">
                                 <input type="text" class="form-control" name="city" />
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">State</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">State</label>
+                            <div class="col-xs-5">
                                 <select name="state" class="form-control">
                                     <option value="">Select a state</option>
                                     <option value="AL">Alabama</option>
@@ -196,16 +196,16 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Zip Code</label>
-                            <div class="col-lg-3">
+                            <label class="col-xs-3 control-label">Zip Code</label>
+                            <div class="col-xs-3">
                                 <input type="text" class="form-control" name="zipCode" />
                             </div>
                         </div>
 
                         <!-- category -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Category</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Category</label>
+                            <div class="col-xs-5">
                                 <select class="form-control" name="category">
                                     <option value="">Select a category</option>
                                     <option value="Spillage">Spillage</option>
@@ -218,14 +218,14 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Comment</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Comment</label>
+                            <div class="col-xs-5">
                                 <textarea class="form-control" name="comment" placeholder="200 characters max." rows="10" data-bv-stringlength data-bv-stringlength-max="200" data-bv-stringlength-message="The comment must be less than 200 characters long"></textarea>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Upload Image(s)</label>
+                            <label class="col-xs-3 control-label">Upload Image(s)</label>
                             <div id="wrapper">
                                 <input id="fileUpload" type="file" multiple />
                                   <br />
@@ -239,8 +239,8 @@
 
                         <!-- terms -->
                         <div class="form-group">
-                            <label class="col-lg-3 control-label">Terms</label>
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Terms</label>
+                            <div class="col-xs-5">
                                 <div class="checkbox">
                                     <input type="checkbox" name="terms" /> Accept the terms and policies
                                 </div>
@@ -249,14 +249,15 @@
 
                         <!-- catpcha -->
                         <div class="form-group">
-                            <div class="col-lg-5">
+                            <label class="col-xs-3 control-label">Captcha</label>
+                            <div class="col-xs-5">
                                 <div class="g-recaptcha" data-sitekey="6Lc_Og8UAAAAAN7g8i4fw32TaqMeXes6yfpv7aNw"></div>
                             </div>
                         </div>
 
                         <!-- buttons -->
                         <div class="form-group">
-                            <div class="col-lg-9 col-lg-offset-3">
+                            <div class="col-xs-9 col-xs-offset-3">
                                 <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
                                 <button type="button" class="btn btn-info" id="validateBtn">Manual validate</button>
                                 <button type="button" class="btn btn-info" id="resetBtn">Reset form</button>
