placing the upload image box in its right place

--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
 
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Upload Image(s)</label>
-                            <div id="wrapper">
+                            <div id="wrapper" class="col-lg-5">
                                 <input id="fileUpload" type="file" multiple />
                                   <br />
                                   <div id="image-holder"></div>
-                                </div>
+                            </div>
                         </div>
 
                         <div class="page-header">
