--- a/result.html
+++ b/result.html
@@ -212,6 +212,11 @@
             </label>
         </div>
 
+
+        <div class="page-header">
+            <h4 style='text-align: left;'>Terms and Agreement</h4>
+        </div>
+
         <!-- terms -->
         <div class="row">
             <label class="col-xs-3 control-label">Terms and Agreement</label>
@@ -219,6 +224,16 @@
                 <script LANGUAGE="JavaScript">document.write(replacedTerms);</script>
             </label>
         </div>
+
+        <div class="page-header">
+            <h4 style='text-align: left;'>Captcha</h4>
+        </div>
+
+        <!-- captcha -->
+        <div class="row">
+            <label class="col-xs-3 control-label">Captcha</label>
+        </div>
+
     </div>
 
 </body>
