--- a/result.html
+++ b/result.html
@@ -217,7 +217,7 @@
 
         <!-- comment -->
         <div class="row">
-            <label class="col-xs-3 control-label">Comennt</label>
+            <label class="col-xs-3 control-label">Comment</label>
             <label class="col-xs-4 control-label">
                 <script LANGUAGE="JavaScript">document.write(replacedComment);</script>
             </label>
@@ -243,6 +243,9 @@
         <!-- captcha -->
         <div class="row">
             <label class="col-xs-3 control-label">Captcha</label>
+            <label class="col-xs-4 control-label">
+                <script LANGUAGE="JavaScript">document.write("Verified");</script>
+            </label>
         </div>
 
     </div>
